# vectis-crdt

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEVTO_ARTICLE.md  LICENSE  README.md  build.sh  package.json  pyproject.toml
.github/workflows/: release.yml
crates/app-core/: Cargo.toml
crates/app-core/src/: app.rs  event.rs  lib.rs  network.rs  peer.rs  stroke.rs  view.rs
crates/vectis-crdt/: Cargo.toml
crates/vectis-crdt/src/: awareness.rs  causal_buffer.rs  compression.rs  document.rs  gc.rs  rga.rs  stroke.rs  types.rs
crates/vectis-crdt/tests/: convergence_props.rs
crates/vectis-protocol/: Cargo.toml
crates/vectis-protocol/src/: codec.rs  error.rs  lib.rs  message.rs  primitives.rs
crates/vectis-server/: Cargo.toml
crates/vectis-server/src/: app.rs  color.rs  connection.rs  lib.rs  main.rs  room.rs  state.rs
crates/wasm_demo/: Cargo.toml  index.html
crates/wasm_demo/src/: browser_app.rs  dom.rs  input.rs  lib.rs  render.rs  ui.rs
demo/: index.html
docs_historical/: DEVTO_ARTICLE.md
src/: awareness.rs  causal_buffer.rs  compression.rs  document.rs  encoding.rs  error.rs  gc.rs  lib.rs  python.rs  rga.rs  stroke.rs  types.rs  wasm_bridge.rs
tests/: convergence_props.proptest-regressions
ts/: document.ts
wasm_demo/: Cargo.toml  index.html
wasm_demo/src/: lib.rs
