[package]
name = "vectis-crdt"
version = "0.1.3"
edition = "2024"
description = "CRDT library for ordered collections of mutable objects. RGA/YATA sequence for deterministic z-order + LWW-Register per property. Binary wire format."
license = "MIT"
repository = "https://github.com/RafaCalRob/vectis-crdt"
homepage = "https://github.com/RafaCalRob/vectis-crdt"
documentation = "https://docs.rs/vectis-crdt"
keywords = ["crdt", "wasm", "collaborative", "rga", "sync"]
categories = ["data-structures", "wasm", "algorithms"]
authors = ["RafaCalRob"]
rust-version = "1.94"

[features]
default  = []
compress = ["lz4_flex"]

[dependencies]
lz4_flex     = { version = "0.11", optional = true }

[dev-dependencies]
proptest          = "1"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"

[workspace]
members = [".", "wasm_demo"]
resolver = "3"
