[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/RafaCalRob/vectis-crdt"
homepage = "https://github.com/RafaCalRob/vectis-crdt"
documentation = "https://docs.rs/vectis-crdt"
authors = ["RafaCalRob"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
