[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "vectis-crdt"
version = "0.1.3"
description = "CRDT library for ordered collections of mutable objects. RGA/YATA sequence for deterministic order + LWW-Register per property. Strong Eventual Consistency."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["crdt", "collaborative", "realtime", "sync", "rga", "yata"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
    "Intended Audience :: Developers",
]

[tool.maturin]
features = ["python"]
