[package]
name = "vectis-protocol"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[dependencies]
vectis-crdt = { path = "../vectis-crdt", default-features = false }
